# vulcan

./: .gitignore  AUTHORS  README.md  compile.sh  meson.build
data/: com.github.zesterer.vulcan.appdata.xml  com.github.zesterer.vulcan.desktop  meson.build  vulcan.desktop.in
src/: config.vala  consts.vala  dynamiclist.vala  filebar.vala  fileinfo.vala  headerbar.vala  main.vala  mainwin.vala  meson.build  notabbox.vala  settingsbar.vala  sidebar.vala  sidebarlist.vala  sourcestack.vala  tabbox.vala  terminal.vala  window.vala
